objects/Adam_Bar__c.object
<CustomObject>
    <description>New details</description>
    <fields>
        <fullName>Adam_Bar_Picklist__c</fullName>
        <label>Adam Bar Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                    <default>true</default>
                    <label>3</label>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Check__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Additional Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Build_Date__c</fullName>
        <label>Build Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Control__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Empty_field__c</fullName>
        <label>Empty field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metazoa_Test_Field__c</fullName>
        <label>Metazoa Test Field</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_text_area__c</fullName>
        <label>My text area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <label>Referral Source</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>another_field__c</fullName>
        <label>another field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>controller__c</fullName>
        <label>controller</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one</fullName>
                </value>
                <value>
                    <fullName>two</fullName>
                </value>
                <value>
                    <fullName>three</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>currency__c</fullName>
        <label>currency</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <label>date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>deletelater__c</fullName>
        <formula>1=1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>deletelater</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dependent__c</fullName>
        <label>dependent</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>controller__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one_112311</fullName>
                </value>
                <value>
                    <fullName>one_80989</fullName>
                </value>
                <value>
                    <fullName>two_090998</fullName>
                </value>
                <value>
                    <fullName>two_8978789</fullName>
                </value>
                <value>
                    <fullName>two_987878</fullName>
                </value>
                <value>
                    <fullName>three_098909</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dominant__c</fullName>
        <label>dominant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>first</fullName>
                </value>
                <value>
                    <fullName>second</fullName>
                </value>
                <value>
                    <fullName>third</fullName>
                </value>
                <value>
                    <fullName>fourth</fullName>
                </value>
                <value>
                    <fullName>fifth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>double__c</fullName>
        <label>double</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iscontrolled__c</fullName>
        <label>iscontrolled</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>dominant__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>first_88090989</fullName>
                </value>
                <value>
                    <fullName>first_0980990</fullName>
                </value>
                <value>
                    <fullName>third_0980909890</fullName>
                </value>
                <value>
                    <fullName>fourth_09090808</fullName>
                </value>
                <value>
                    <fullName>fifth_989809890</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>javascript__c</fullName>
        <formula>HYPERLINK(&quot;http://www.bbc.co.uk/search/news/?q=&quot;&amp;Name,&quot;BBC News&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>javascript</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>junkfield__c</fullName>
        <label>junkfield</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>master_custom__c</fullName>
        <label>child123</label>
        <referenceTo>child123__c</referenceTo>
        <relationshipLabel>Adam Bars</relationshipLabel>
        <relationshipName>Adam_Bars</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>master_standard__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Adam Bars</relationshipLabel>
        <relationshipName>Adam_Bars</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>metazoa_formula__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>metazoa_formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa_textonly__c</fullName>
        <externalId>true</externalId>
        <label>metazoa_textonly</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>multiselect_global__c</fullName>
        <label>multiselect_global</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>testing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>multiselect_regular__c</fullName>
        <label>multiselect_regular</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one</fullName>
                </value>
                <value>
                    <fullName>two</fullName>
                </value>
                <value>
                    <fullName>three</fullName>
                </value>
                <value>
                    <fullName>four</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>new_number__c</fullName>
        <label>new_number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percent__c</fullName>
        <label>percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>required__c</fullName>
        <label>required</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>richtext__c</fullName>
        <label>richtext</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>self_reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adam Bar</label>
        <referenceTo>Adam_Bar__c</referenceTo>
        <relationshipLabel>Adam Bars</relationshipLabel>
        <relationshipName>Adam_Bars</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>subservient__c</fullName>
        <label>subservient</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>controller__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one_98989</fullName>
                </value>
                <value>
                    <fullName>two_09809890</fullName>
                </value>
                <value>
                    <fullName>three_80980989</fullName>
                </value>
                <value>
                    <fullName>three_9890890</fullName>
                </value>
                <value>
                    <fullName>four_0989090</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>unique__c</fullName>
        <label>unique</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>very_unique__c</fullName>
        <label>very_unique</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zzzzz_external_id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzzzz_external_id</label>
        <type>Text</type>
    </fields>
    <label>Adam Bar</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>testbars</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>testbars</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Adam Bar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adam Bars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>